# Fit2Obs

./: .gitignore  CMakeLists.txt  README.md
.svn/: wc.db
batrun/: excfs_gdas_vrfyfits.sh.dell  excfs_gdas_vrfyfits.sh.ecf  excfs_gdas_vrfyfits.sh.wcoss  runfits  runfits.cray  runfits.dell  runfits.wcoss  subfits_cray_nems  subfits_dell_nems  subfits_hera  subfits_hera_slurm  subfits_jet  subfits_orion  subfits_orion_netcdf  subfits_theia_nems  subfits_wcoss  subfits_wcoss2  subfits_zeus
exec/: cfs_acar  cfs_acft  cfs_bufrslsfc  cfs_bufrslslev  cfs_bufrslupao  cfs_combfr  cfs_duprep  cfs_post_convdiag  cfs_raob  cfs_sfc  cfs_surf  ndate  rembfr  splitac
fix/: CMakeLists.txt
modulefiles/: CMakeLists.txt  fit2obs.lua.tmpl  fit2obs_common.lua  fit2obs_hera.intel.lua  fit2obs_hercules.lua  fit2obs_jet.lua  fit2obs_orion.lua  fit2obs_s4.lua  fit2obs_wcoss2.lua
runs/: rundell.cfs  rundell.v15  rundell.v16  runhera  runorio.v15  runorio.v16  runorion  runwc2.v16  runwcoss2.v16  subfits_dell  subfits_orio  subfits_wc2  subfits_wcoss2  wcoss2.driver
scripts/: CMakeLists.txt  excfs_gdas_vrfyfits.sh
sorc/: CMakeLists.txt  README  makes
sorc/cfs_fit2obs.fd/: CMakeLists.txt  Makefile  cfs_acar.f  cfs_acft.f  cfs_bufrslsfc.f  cfs_bufrslslev.f  cfs_bufrslupao.f  cfs_nfill.f  cfs_raob.f  cfs_raob.f.org  cfs_sfc.f  cfs_surf.f  makes
sorc/cfs_postevent.fd/: CMakeLists.txt  Makefile_convdiag  Makefile_convnetc  Makefile_duprep  Makefile_splitac  combfr.f  convdiag.f  duprep.f  makes  makesh  read_convdiag2.f  read_convdiag3.f  splitac.f
sorc/cfs_prevmpi.fd/: CMakeLists.txt  Makefile  gblevn00.f  gblevn01.f  gblevn02.f  gblevn04.f  gblevn08.f  gblevn10.f  gblevn10nems.f  gblevn10netc.f  gblevn35.f  grdcrd.f  makes  mk  mpicast.f  oefg01.f  prevents.f  selectfile.f  sptranf.f
sorc/ndate.fd/: CMakeLists.txt  Makefile  makes
ush/: ACprof  CMakeLists.txt  build.sh  cfs_bufr_post.sh  cfs_cdas_fits.sh  cfs_cdas_horizn.sh  cfs_cmon.sh  cfs_combfr.sh  cfs_horizn.sh  cfs_prevmpi.sh  detect_machine.sh  runfits.sh
ush/batrun/: subfits_hera  subfits_orion
